# Raytracer

./: CMakeLists.txt  readme.build
src/: main.cpp
src/math/: color.h  mat3.h  mat4.h  vec3.h  vec4.h
src/parser/: scene_parser.cpp  scene_parser.h  scene_parser_lights.cpp  scene_parser_surface.cpp  xml_parser_utils.cpp  xml_parser_utils.h
src/parser/obj-parser/: object_parser.cpp  object_parser.h
src/scene/: camera.h  scene.h
src/scene/lights/: ambient_light.h  light.h  parallel_light.h  point_light.h  spot_light.h
src/scene/lights/utils/: lights.h  lights_io.cpp
src/scene/surfaces/: material.h  mesh.h  sphere.h  surface.h  surface_io.h  transform.cpp  transform.h
